Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94441

Axis title labels do not respect the Abstract3DAxis's titleFixed property

    XMLWordPrintable

Details

    • Windows
    • 3333795ff1f60d4f68ee7bdab5ef129b23121efb (qt/qtdatavis3d/dev) 0de43933a09e079dad2caf5a8e7e84f5801e2c87 (qt/qtdatavis3d/6.1)

    Description

      When the graph is rotated so that it is viewed from behind and titleFixed property for axis is set to true, the axis title labels are not rotated to face the camera.

      Attachments

        For Gerrit Dashboard: QTBUG-94441
        # Subject Branch Project Status CR V

        Activity

          People

            oulu_hillbilly Sami Varanka
            oulu_hillbilly Sami Varanka
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes