Fix: Axis titles do not respect title fixed

When a graph is rotated so that it is viewed from
below the y axis gets flipped. However, x and z
axis were not rotated correctly which caused them
to be unvisible.

Pick-to: 6.1
Fixes: QTBUG-94441
Change-Id: Ic56b910ce790526fd0460aa895ce978e6efd0b23
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>